src/app/pages/shared/toast-message/toast-message.component.scss
@import "~@angular/material/theming";

:host {
  position: absolute;
  right: 20px;
  top: 80px;
  z-index: 10000;
  .wrapper {
    background: none;
  }
}
aside {
  @include mat-elevation(3);
  border-radius: 4px;
  color: white;
  margin-bottom: 20px;
  padding: 5px 15px;
  width: 300px;
  .error & {
    background-color: #ed6f56;
  }
  .info & {
    background-color: #2ecd99;
  }
}

